# altruistclient

./: .gitignore  pyproject.toml  pytest.ini
.github/workflows/: build.yml  release.yml
tests/: conftest.py  test_client.py
