[project]
name = "altruistclient"
version = "0.1.0"
description = "Async library for discovering and fetching data from Altruist sensors"
readme = "README.md"
authors = [
  { name="Your Name", email="your.email@example.com" }
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "aiohttp",
  "zeroconf",
  "async-timeout",
]

[project.urls]
Homepage = "https://github.com/yourusername/altruistclient"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
