[project]
name = "altruistclient"
version = "0.1.0"
description = "Async library for discovering and fetching data from Altruist sensors"
readme = "README.md"
authors = [
  { name="Alena Bugrova", email="bugrovaad@gmail.com" }
]
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
  "aiohttp",
  "zeroconf",
]

[project.urls]
Homepage = "https://github.com/LoSk-p/altruistclient"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
